# skill_factory_cpp_33

./: .gitmodules
11.7/: CMakeLists.txt  main.cpp
12.7/: CMakeLists.txt  main.cpp
18.2.1/: CMakeLists.txt  data_classes.h  file_lib.cpp  file_lib.h  main.cpp  message_config  new_message_config  user_config
20.11/: CMakeLists.txt  main.cpp
20.11/Listener/: listener.cpp  listener.h
20.11/Sender/: sender.cpp  sender.h
26.9/: CMakeLists.txt
28.9/: CMakeLists.txt  main.cpp
29.7/: CMakeLists.txt  main.cpp  thread_safe_list.cpp  thread_safe_list.hpp
5.9.1/: CMakeLists.txt  main.cpp
5.9.1/SnackSlot/: snack_slot.h
5.9.1/VendingMachine/: vending_machine.h
6.7.1/: CMakeLists.txt  main.cpp
6.7.1/electronics/: electronics.cpp  electronics.h
6.7.1/laptop/: laptop.cpp  laptop.h
6.7.1/sold_electronics/: sold_electronics.cpp  sold_electronics.h
6.7.1/tablet/: tablet.cpp  tablet.h
6.7.1/transformer/: transformer.cpp  transformer.h
7.7.1/: CMakeLists.txt  main.cpp
7.7.1/IntArray/: int_array.cpp  int_array.h  int_array_exceptions.cpp  int_array_exceptions.h
8.8.1/: CMakeLists.txt  main.cpp
8.8.1/Array/: array.h  array_exceptions.cpp  array_exceptions.h
Progect1/: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  readMe
Progect1/Alexei/: Message.cpp  Message.h  User.cpp  User.h  main.cpp
Progect1/SkillChat/: CMakeLists.txt  main.cpp
Progect1/SkillChat/Exception/: chat_exception.cpp  chat_exception.h
Progect1/SkillChat/Logger/: logger.cpp  logger.h
Progect1/SkillChat/Message/: message.cpp  message.h
Progect1/SkillChat/MessageKeeper/: message_keeper.cpp  message_keeper.h
Progect1/SkillChat/MessageKeeper/MessageKeeperException/: message_keeper_exception.h
Progect1/SkillChat/MessageKeeper/MySql/: my_sql_message_keeper.h
Progect1/SkillChat/MessageKeeper/SqlLite/: sql_lite_message_keeper.cpp  sql_lite_message_keeper.h
Progect1/SkillChat/MessageKeeper/SqlLite/SqLiteException/: sql_lite_exception.h
Progect1/SkillChat/Ui/: ui.cpp  ui.h
Progect1/SkillChat/Ui/ConsoleUi/: console_ui.cpp  console_ui.h
Progect1/SkillChat/User/: user.cpp  user.h
Progect2/: CMakeLists.txt  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h  startscreen.ui
Progect2/sources/: Database.cpp  Database.h  User.cpp  User.h  main.cpp  mainwindow.cpp  mainwindow.h  (+2 more)
Snack/: snack.cpp  snack.h
SnackSlot/: snack_slot.cpp
VendingMachine/: vending_machine.cpp
(+1 files in other folders)
